--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
       </body>
       <script>
 
-      var col = "white";
 
       //randomColor function is taken from http://www.devcurry.com/2010/08/generate-random-colors-using-javascript.html //
-      function randomRgb() {
-      // create the rgb string
-      col =  "rgb("
-      + randomColor(255) + ","
-      + randomColor(255) + ","
-      + randomColor(255) + ")";
+      function randomRgb(value) {
 
-      //change the text color with the new random color
+      col =  "rgb("
+      + randomColor(255) * value + ","
+      + randomColor(255) * value + ","
+      + randomColor(255) * value + ")";
       }
 
       function randomColor(num) {
@@ -49,20 +46,34 @@
 
       function createGrid(numberOfRows) {
 
+
         resetColorOfBoxes()
 
         /*Change number of grid-template-columns and grid-template-rows under #container in stylesheet*/
         document.documentElement.style.setProperty("--columns-row", numberOfRows);
+        var container = document.getElementById("container");
+        container.style.gridTemplateColumns = "repeat(10, 1fr)"
+        container.style.gridTemplateRows = "repeat(10, 1fr)"
+
+        let brightness = [];
 
         let i = 0;
         let numberOfBoxes = numberOfRows**2;
 
         /*Create boxes*/
         for (i; i < numberOfBoxes ; i++) {
+          brightness[i+1] = 1;
+          console.log(brightness);
+
           var div = document.createElement("div");
+          div.classList.add(i+1);
           document.getElementById("container").appendChild(div);
+
           div.addEventListener("mouseenter", function () {
-            randomRgb();
+            var className = this.className;
+            brightness[className] = brightness[className] - 0.1;
+            console.log(brightness[className]);
+            randomRgb(brightness[className]);
             this.style.backgroundColor = col;
           });
         }
