Center grid container horizontally

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
         <title>Etch-a-sketch</title>
       </head>
       <body>
-        <h1>Etch-a-sketch</h1>
-        <button id="start">Start</button>
-        <div id="container"></div>
+        <div id="outer">
+          <div id="inner">
+            <h1>Etch-a-sketch</h1>
+            <button id="start">Start</button>
+            <div id="container"></div>
+          </div>
+        </div>
       </body>
       <script>
 
